--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
             <div class="row">
                 <div class="col-lg-6 m-auto text-center">
                     <div class="icon">
-                        <img src="images/git.png" alt="git">
-                        <img src="images/linkdin.png" alt="git">
+                        <a href="https://github.com/arrahmanriju">
+                            <img src="images/git.png" alt="git">
+                        </a>
+                        <a href="">
+                            <img src="images/linkdin.png" alt="git">
+                        </a>
                     </div>
                 </div>
             </div>
